src/style.css
body {
  margin:0;
  height:100vh;
}

header {
  text-align:center;
  background:#4CAF50;
  height:60px;
  line-height:60px;
}

h1 {
  font-family:'Roboto', sans-serif;
  font-weight:500;
  margin:0;
  color:#212121;
}

main {
  height:calc(100% - 60px);
  display:flex;
}

#settings {
  height:100%;
  background:yellow;
  flex-basis:0;
  flex-grow:1;
}

#settings h2 {
  font-family:'Roboto', sans-serif;
  font-weight:500;
  margin:0;
  text-align:center;
}

#columns {
  text-align:center;
}

.column {
  display:inline-flex;
}

.setting {
  max-width:100px;
  width:100px;
  margin-top:10px;
}
.setting h3 {
  margin:0;
  font-family:'Roboto', sans-serif;
  font-weight:500;
  text-align:left;
}
.setting input {
  width:100%;
  border:0;
}

#canvas {
  height:100%;
  background:green;
  flex-basis:0;
  flex-grow:4;
}

